# shai-hulud-detect-rust

./: .gitignore  100_PERCENT_MATCH_ACHIEVED.md  ANALYZE_FOLDER_REVIEW.md  ARCHIVE_TEST_ANALYSIS.md  BASH_BUG_ISSUE_TEMPLATE.md  BASH_FIX_RESULTS.md  BUG_ANALYSIS_WHY_UNDETECTED.md  CHANGELOG.md  CLEANUP_AND_FIX_PLAN.md  COMMUNITY_ISSUES_ANALYSIS.md  COMPLETE_SUMMARY.md  Cargo.toml  E2E_TEST_BASELINE.md  FINAL_CLEANUP_REPORT.md  FINAL_STATUS_REPORT.md  FINDINGS_STATUS.md  GITHUB_ISSUE_43_CORRECTED.md  HOMOGLYPH_BUG_ISSUE.md  IMPROVED_TESTING_DOCS.md  LARGE_REPO_BASELINE.txt  LICENSE  MERGE_REQUEST_BASH_FIX.md  PARANOID_ROOT_CAUSE.md  PERFECT_MATCH_ACHIEVEMENT.md  PULL_REQUEST_CROSS_PLATFORM.md  README.md  SCAN_COMPARISON_REPORT.md  TESTCASE_COMPARISON_REPORT.md  TEST_CASE_EXPECTATIONS.md  TODO.md  TODO_VERIFICATION.md  VERIFICATION_COMPLETE.md  VERIFICATION_GUIDE.md  bash-comprehensive-analysis.txt  deploy_security_workflow.sh  infected-project-results.json  pattern_mappings.csv  release.sh  rust_final.txt  rust_final_fixed.txt  (+6 more)
.github/: copilot-instructions.md  dependabot.yml
bash-log-parser/: Cargo.toml  test_parser.sh
bash-log-parser/src/: main.rs
docs/: pattern-risk-comparison-all.md  rust-bash-diffs.md  test-cases-comparison.md
examples/: test_verification_runner.rs
scripts/: README.md  analyze_bash_counting.sh  analyze_bash_high.sh  cleanup_all.sh  commit_fixes.sh  compare_high_counts.sh  debug_bash_parse.py  detailed_comparison.sh  exact_bash_high_count.sh  exact_rust_high_breakdown.sh  final_commit.sh  final_comprehensive_test.sh  final_verification.sh  find_high_diff.sh  rust_high_breakdown.sh  rust_scanner_comparison_report.md  verify_normal_mode.sh  verify_pattern_match.py
src/: cli.rs  colors.rs  data.rs  e2e_tests.rs  hash_checker.rs  lib.rs  main.rs  output.rs  pattern_registry.rs  pattern_table.rs  patterns.rs  report.rs  scanner.rs  semver.rs  temp_file_manager.rs  utils.rs
test-results/: chalk-debug-attack_bash.txt  chalk-debug-attack_rust.txt  clean-project_bash.txt  clean-project_rust.txt  common-crypto-libs_bash.txt  common-crypto-libs_rust.txt  comprehensive-test_bash.txt  comprehensive-test_rust.txt  debug-js_bash.txt  debug-js_rust.txt  edge-case-project_bash.txt  edge-case-project_rust.txt  false-positive-project_bash.txt  false-positive-project_rust.txt  git-branch-test_bash.txt  (+31 more)
tests/: README.md  (+20 more)
(+152 files in other folders)
