[package]
name = "shai-hulud-detector"
version = "2.6.3"
edition = "2021"
description = "Rust Shai-Hulud NPM Supply Chain Attack Detection Tool - 100% Bash Compatible"
authors = ["Goran Strainovic", "Optimized for exact Bash compatibility"]

[[bin]]
name = "shai-hulud-detector"
path = "src/main.rs"

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"

# Timing
chrono = "0.4"

# JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

# File system
walkdir = "2.4"

# Hashing (SHA-256)
sha2 = "0.10"
hex = "0.4"

# Regex matching
regex = "1.10"
lazy_static = "1.4"

# Parallel processing
rayon = "1.8"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Terminal colors
colored = "2.1"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
