[package]
name = "bash-log-parser"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bash-log-parser"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
nom = "7.1"
